Fix API endpoint URL in workflow

--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Trigger Daily Update
       run: |
-        curl -X POST "https://nyt-connections-helper.pages.dev/functions/scheduled" \
+        curl -X POST "https://nyt-connections-helper.pages.dev/scheduled" \
           -H "Content-Type: application/json" \
           -d '{
             "action": "daily-update",
