Trigger new workflow run to test automation

--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -17,4 +17,5 @@ jobs:
           -d '{
             "action": "daily-update",
             "secret": "${{ secrets.CRON_SECRET }}"
-          }'
+          }'#
+ Trigger new workflow run
