Update backup data and fix GitHub Actions workflow - remove old Aug 29 data

--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -1,10 +1,14 @@
 name: Daily NYT Connections Update
-# Manual trigger test
 
 on:
   schedule:
     - cron: '0 6 * * *'
   workflow_dispatch:
+    inputs:
+      force_update:
+        description: 'Force update today data'
+        required: false
+        default: 'true'
 
 jobs:
   update-puzzle:
