--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -2,7 +2,7 @@ name: Daily NYT Connections Update
 
 on:
   schedule:
-    - cron: '0 6 * * *'
+    - cron: '0 1 * * *'   # UTC 01:00 = 北京时间09:00 = 美国东部时间21:00(前一天)
   workflow_dispatch:
     inputs:
       force_update:
