--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2023-10-30"
 
 # 定时触发配置
 [triggers]
-crons = ["0 1 * * *"]  # 每天UTC 01:00执行
+crons = ["20 4 * * *"]  # 每天UTC 04:20执行 (北京时间12:20)
 
 # KV存储绑定
 [[kv_namespaces]]
